# skill-hub

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.local.yaml  compose.yaml  pyproject.toml
deploy/gcp/: README.md  compose.gcp.yaml  compose.nexus-source.yaml  deploy.sh  startup.sh
docker/: nexus.Dockerfile  nexus.local.Dockerfile  nexus.skillhub.yaml
docs/: usage.md
docs/api/: phase1.md
docs/architecture/: phase1.md
examples/hello-skill/: SKILL.md  skillhub.yaml
examples/hello-skill/references/: quickstart.md
scripts/: e2e_smoke.sh  evaluate_builtin_skill_search.py
src/skillhub/: __init__.py  api.py  cli.py  legacy_skill.py  local_package.py  manifest.py  models.py  nexus_adapter.py  service.py  settings.py  store.py
tests/: test_api.py  test_legacy_skill.py  test_manifest.py  test_nexus_adapter.py
