[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "skill-hub"
version = "0.1.0"
description = "Nexus-backed skill catalog, package publishing, search, and installation control plane."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
skillhub = "skillhub.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skillhub"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
